// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit.vue.components.ui.PhoTooltip Mounts 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse click With one click Overrides mouseenter 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 bottom"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      <div
        class="text-xs tracking-wide"
      >
        Some Tooltip Text
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse click With one click Shows the tooltip 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 bottom"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      <div
        class="text-xs tracking-wide"
      >
        Some Tooltip Text
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse click With two clicks Hides the tooltip 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the content slot on 'bottom' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 bottom"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      
      <div>
        Tooltip with 
        <strong>
          strong
        </strong>
         html content
      </div>
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the content slot on 'left' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 bottom"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      
      <div>
        Tooltip with 
        <strong>
          strong
        </strong>
         html content
      </div>
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the content slot on 'right' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 bottom"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      
      <div>
        Tooltip with 
        <strong>
          strong
        </strong>
         html content
      </div>
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the content slot on 'top' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 bottom"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      
      <div>
        Tooltip with 
        <strong>
          strong
        </strong>
         html content
      </div>
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the text on 'bottom' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 bottom"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      <div
        class="text-xs tracking-wide"
      >
        Some Tooltip Text
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the text on 'left' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 left"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      <div
        class="text-xs tracking-wide"
      >
        Some Tooltip Text
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the text on 'right' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 right"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      <div
        class="text-xs tracking-wide"
      >
        Some Tooltip Text
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Renders the text on 'top' 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <div
      ci="tooltip:pho-tooltip-comp:tooltip"
      class="tooltip absolute bg-gray-800 text-white rounded-sm text-center px-2 py-1 top"
      id="tooltip:pho-tooltip-comp:my-uuid:tooltip"
      style="--transition-delay-in: 700ms; --transition-delay-out: 300ms;"
    >
      
      <div
        class="text-xs tracking-wide"
      >
        Some Tooltip Text
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse enter Sets the attributes when it is shown 1`] = `
Object {
  "class": "wrapper relative",
  "cy": "tooltip:pho-tooltip-comp",
  "id": "tooltip:pho-tooltip-comp:my-uuid",
}
`;

exports[`unit.vue.components.ui.PhoTooltip On mouse leave Hides the tooltip 1`] = `
<div
  class="wrapper relative"
  cy="tooltip:pho-tooltip-comp"
  id="tooltip:pho-tooltip-comp:my-uuid"
>
  <div
    class="inline-block w-full"
  >
    
    
    Tooltip Trigger
    
    
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
`;
